--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -1,6 +1,6 @@
 FROM debian:stable-slim
 
-ENV DENO_VERSION=1.7.0
+ENV DENO_VERSION=1.6.3
 
 # This Dockerfile adds a non-root user with sudo access. Use the "remoteUser"
 # property in devcontainer.json to use it. On Linux, the container user's GID/UIDs
@@ -26,27 +26,30 @@ ARG DOCKER_USE_MOBY="true"
 
 # Configure apt and install packages
 RUN apt-get update \
-    && export DEBIAN_FRONTEND=noninteractive \
-    #
-    # Verify git, common tools / libs installed, add/modify non-root user, optionally install zsh
-    && apt-get -y install --no-install-recommends curl ca-certificates 2>&1 unzip \
-    && curl -sSL  ${COMMON_SCRIPT_SOURCE} -o /tmp/common-setup.sh \
-    && ([ "${COMMON_SCRIPT_SHA}" = "dev-mode" ] || (echo "${COMMON_SCRIPT_SHA} */tmp/common-setup.sh" | sha256sum -c -)) \
-    && /bin/bash /tmp/common-setup.sh "${INSTALL_ZSH}" "${USERNAME}" "${USER_UID}" "${USER_GID}" "${UPGRADE_PACKAGES}" \
-    && rm /tmp/common-setup.sh \
-    # Install Docker
-    && curl -sSL  ${DOCKER_SCRIPT_SOURCE} -o /tmp/docker-setup.sh \
-    && ([ "${DOCKER_SCRIPT_SHA}" = "dev-mode" ] || (echo "${DOCKER_SCRIPT_SHA} */tmp/docker-setup.sh" | sha256sum -c -)) \
-    && /bin/bash /tmp/docker-setup.sh "${DOCKER_ENABLE_NONROOT_DOCKER}" "${DOCKER_SOURCE_SOCKET}" "${DOCKER_TARGET_SOCKET}" "${DOCKER_USERNAME}" "${DOCKER_USE_MOBY}" \
-    && rm /tmp/docker-setup.sh \
-    # Install Deno
-    && curl -fsSL https://github.com/denoland/deno/releases/download/v${DENO_VERSION}/deno-x86_64-unknown-linux-gnu.zip \
-         --output deno.zip \
-    && unzip deno.zip \
-    && rm deno.zip \
-    && chmod 777 deno \
-    && mv deno /usr/bin/deno \
-    # Clean up
-    && apt-get autoremove -y \
-    && apt-get clean -y \
-    && rm -rf /var/lib/apt/lists/*
+     && export DEBIAN_FRONTEND=noninteractive \
+     #
+     # Verify git, common tools / libs installed, add/modify non-root user, optionally install zsh
+     && apt-get -y install --no-install-recommends curl ca-certificates 2>&1 unzip \
+     && curl -sSL  ${COMMON_SCRIPT_SOURCE} -o /tmp/common-setup.sh \
+     && ([ "${COMMON_SCRIPT_SHA}" = "dev-mode" ] || (echo "${COMMON_SCRIPT_SHA} */tmp/common-setup.sh" | sha256sum -c -)) \
+     && /bin/bash /tmp/common-setup.sh "${INSTALL_ZSH}" "${USERNAME}" "${USER_UID}" "${USER_GID}" "${UPGRADE_PACKAGES}" \
+     && rm /tmp/common-setup.sh \
+     # Install Docker
+     && curl -sSL  ${DOCKER_SCRIPT_SOURCE} -o /tmp/docker-setup.sh \
+     && ([ "${DOCKER_SCRIPT_SHA}" = "dev-mode" ] || (echo "${DOCKER_SCRIPT_SHA} */tmp/docker-setup.sh" | sha256sum -c -)) \
+     && /bin/bash /tmp/docker-setup.sh "${DOCKER_ENABLE_NONROOT_DOCKER}" "${DOCKER_SOURCE_SOCKET}" "${DOCKER_TARGET_SOCKET}" "${DOCKER_USERNAME}" "${DOCKER_USE_MOBY}" \
+     && rm /tmp/docker-setup.sh \
+     # Install Deno
+     && curl -fsSL https://github.com/denoland/deno/releases/download/v${DENO_VERSION}/deno-x86_64-unknown-linux-gnu.zip \
+     --output deno.zip \
+     && unzip deno.zip \
+     && rm deno.zip \
+     && chmod 777 deno \
+     && mv deno /usr/bin/deno \
+     # Clean up
+     && apt-get autoremove -y \
+     && apt-get clean -y \
+     && rm -rf /var/lib/apt/lists/* \
+     # Install Aleph
+     && deno install -A -f -n aleph https://deno.land/x/aleph@v0.2.28/cli.ts \
+     && export PATH="/root/.deno/bin:$PATH"
