--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -1,12 +1,21 @@
 version: '3.8'
 services:
+  web:
+    build:
+      context: src/client/web/
+      dockerfile: Dockerfile
+    ports:
+      - "8000:80"
+    depends_on:
+      - authentication
+      - dashboard
   authentication:
     build:
       context: src/service/authentication/
       dockerfile: Dockerfile
     ports:
       - "8001:8001"
-    depends_on: 
+    depends_on:
       - authentication-db
   authentication-db:
     image: postgres:alpine
@@ -22,8 +31,8 @@ services:
       dockerfile: Dockerfile
     ports:
       - "8002:8002"
-    depends_on: 
-      - authentication-db
+    depends_on:
+      - dashboard-db
   dashboard-db:
     image: postgres:alpine
     restart: always
