--- a/src/client/web/.gitignore
+++ b/src/client/web/.gitignore
@@ -1,23 +1,4 @@
-# dependencies
-node_modules
-/.pnp
-.pnp.js
-
-# testing
-coverage
-
-# production
-dist
-dist-ssr
-
-# misc
 .DS_Store
-*.local
-
-# logs
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
-
-#cache
-.eslintcache
+Thumbs.db
+.aleph/
+dist/
