--- a/src/service/dashboard/.vscode/settings.json
+++ b/src/service/dashboard/.vscode/settings.json
@@ -1,8 +1,14 @@
 {
+  "editor.formatOnSave": true,
   "deno.enable": true,
+  "deno.unstable": true,
   "deno.import_intellisense_origins": {
     "https://deno.land": true
   },
-  "editor.formatOnSave": true,
-  "deno.unstable": true
+  "[typescript]": {
+    "editor.defaultFormatter": "denoland.vscode-deno"
+  },
+  "[javascript]": {
+    "editor.defaultFormatter": "denoland.vscode-deno"
+  }
 }
